[add] Add 3-times option

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                     {name: "default", func: () =>{
                         $scope.option = defaultOption;
                     }},
+                    {name: "3-times", func: () => {
+                        $scope.option.times = 3;
+                    }},
                     {name: "Onetime", func: () => {
                         $scope.option.times = 1;
                     }},
