[typo] Correct "client" spelling

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 </head>
 <body>
     <div ng-controller="transCtrl">
-        <h1>trans clinet for browser</h1>
+        <h1>trans client for browser</h1>
 
         <form action="{{formAction()}}" method="post" enctype="multipart/form-data">
 
